<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/img_will_advanced"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:contentDescription="@string/img_description" />

        <br.com.usp.willianerodrigues.course.util.RobotoRegular
            android:id="@+id/will_talk_question_advanced"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/will_advanced_frase1"
            android:textColor="@color/md_purple_500"
            android:textSize="16sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/initial_container_button_question_pc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:visibility="visible">

        <Button
            android:id="@+id/btn_cancel_advance"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@drawable/border_button_purple"
            android:padding="8dp"
            android:text="@string/btn_cancel_advance"
            android:textAllCaps="true"
            android:textColor="@color/md_purple_500" />

        <Button
            android:id="@+id/btn_next_advance"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:background="@drawable/raised_button_purple"
            android:padding="8dp"
            android:text="@string/btn_next_advance"
            android:textAllCaps="true"
            android:textColor="@color/md_text_white" />

    </LinearLayout>

</LinearLayout>