<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="br.com.usp.willianerodrigues.course.activity.RegistroActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_register"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>

    <ProgressBar
        android:id="@+id/progress_register"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:scrollbars="none|vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <br.com.usp.willianerodrigues.course.util.Bauhs93
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/app_name_into"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="34sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <br.com.usp.willianerodrigues.course.util.RobotoRegular
                    android:id="@+id/text_new_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="start"
                    android:text="@string/new_account"
                    android:textColor="@color/md_text"
                    android:textSize="20sp"/>

                <br.com.usp.willianerodrigues.course.util.RobotoRegular
                    android:id="@+id/text_new_account_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="16dp"
                    android:gravity="start"
                    android:text="@string/new_account_description"
                    android:textColor="@color/md_grey_500"
                    android:textSize="16sp"/>

            </LinearLayout>

            <br.com.usp.willianerodrigues.course.util.RobotoRegular
                android:id="@+id/text_new_account_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="16dp"
                android:gravity="start"
                android:text="@string/about_count"
                android:textColor="?attr/colorPrimaryDark"
                android:textSize="16sp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <EditText
                    android:id="@+id/textName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:textSize="16sp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/textSobrenome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_lastname"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:textSize="16sp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/textMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_username"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="16sp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">

                <EditText
                    android:id="@+id/senha_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:imeActionId="@+id/register"
                    android:imeActionLabel="@string/action_register_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxEms="16"
                    android:maxLines="1"
                    android:minEms="4"
                    android:singleLine="true"
                    android:textSize="16sp"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/email_register_button"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_gravity="center"
                    android:background="@drawable/border_button_purple"
                    android:padding="8dp"
                    android:text="@string/text_button_register"
                    android:textAllCaps="true"
                    android:textColor="@color/md_purple_500"/>

            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</LinearLayout>
