<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/side_nav_bar"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:contentDescription="@string/img_description"
        app:srcCompat="@drawable/trophy"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:orientation="vertical">

        <br.com.usp.willianerodrigues.course.util.RobotoRegular
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drawer_point"
            android:textColor="@color/md_white_1000"
            android:textSize="24sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <br.com.usp.willianerodrigues.course.util.RobotoBold
                android:id="@+id/pontuacao_drawer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="000"
                android:textColor="@color/md_white_1000"
                android:textSize="34sp"/>

            <br.com.usp.willianerodrigues.course.util.RobotoRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/drawer_point_litle"
                android:textColor="@color/md_white_1000"
                android:textSize="20sp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
